force-app/main/default/objects/ProductAttribute/fields/Accessory__c.field-meta.xml
<CustomField>
    <fullName>Accessory__c</fullName>
    <label>Accessory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC Clamp</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Extrusion</fullName>
            </value>
            <value>
                <fullName>Mounting</fullName>
            </value>
            <value>
                <fullName>Cable</fullName>
            </value>
            <value>
                <fullName>Plug</fullName>
            </value>
            <value>
                <fullName>Tape-Driver</fullName>
            </value>
            <value>
                <fullName>Butt joint</fullName>
            </value>
            <value>
                <fullName>Tape-Tape</fullName>
            </value>
            <value>
                <fullName>Tape-Cable</fullName>
            </value>
            <value>
                <fullName>2 Way Distribution Box</fullName>
            </value>
            <value>
                <fullName>3 Way Distribution Box</fullName>
            </value>
            <value>
                <fullName>4 Way Distribution Box</fullName>
            </value>
            <value>
                <fullName>2 Way 3 Pole</fullName>
            </value>
            <value>
                <fullName>2 Way 4 Pole</fullName>
            </value>
            <value>
                <fullName>2 Way 5 Pole</fullName>
            </value>
            <value>
                <fullName>3 Way 5 Pole</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>