force-app/main/default/objects/ProductAttribute/fields/Accessory_Type__c.field-meta.xml
<CustomField>
    <fullName>Accessory_Type__c</fullName>
    <label>Accessory Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC Cable</fullName>
            </value>
            <value>
                <fullName>AC Plug</fullName>
            </value>
            <value>
                <fullName>Battery Pack</fullName>
            </value>
            <value>
                <fullName>Cable Joiner</fullName>
            </value>
            <value>
                <fullName>Clip</fullName>
            </value>
            <value>
                <fullName>Connector</fullName>
            </value>
            <value>
                <fullName>DC Cable</fullName>
            </value>
            <value>
                <fullName>DC Tip</fullName>
            </value>
            <value>
                <fullName>Metalwork</fullName>
            </value>
            <value>
                <fullName>Monitor Unit</fullName>
            </value>
            <value>
                <fullName>Remote Control</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>