force-app/main/default/objects/ProductAttribute/fields/Ah__c.field-meta.xml
<CustomField>
    <fullName>Ah__c</fullName>
    <label>Ah</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1.2Ah to 32Ah</fullName>
            </value>
            <value>
                <fullName>125Ah Maximum</fullName>
            </value>
            <value>
                <fullName>160Ah Maximum</fullName>
            </value>
            <value>
                <fullName>200Ah Maximum</fullName>
            </value>
            <value>
                <fullName>400Ah Maximum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>