force-app/main/default/objects/ProductAttribute/fields/Applications__c.field-meta.xml
<CustomField>
    <fullName>Applications__c</fullName>
    <label>Applications</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>