force-app/main/default/objects/ProductAttribute/fields/Beam_Angle__c.field-meta.xml
<CustomField>
    <fullName>Beam_Angle__c</fullName>
    <label>Beam Angle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>120°</fullName>
            </value>
            <value>
                <fullName>30°</fullName>
            </value>
            <value>
                <fullName>90°</fullName>
            </value>
            <value>
                <fullName>T2</fullName>
            </value>
            <value>
                <fullName>T3</fullName>
            </value>
            <value>
                <fullName>T4</fullName>
            </value>
            <value>
                <fullName>100°</fullName>
            </value>
            <value>
                <fullName>110°</fullName>
            </value>
            <value>
                <fullName>150°</fullName>
            </value>
            <value>
                <fullName>160°</fullName>
            </value>
            <value>
                <fullName>25°</fullName>
            </value>
            <value>
                <fullName>30° x 70°</fullName>
            </value>
            <value>
                <fullName>32° x 84°</fullName>
            </value>
            <value>
                <fullName>40° x 130°</fullName>
            </value>
            <value>
                <fullName>45°</fullName>
            </value>
            <value>
                <fullName>50° x 88°</fullName>
            </value>
            <value>
                <fullName>55°</fullName>
            </value>
            <value>
                <fullName>60°</fullName>
            </value>
            <value>
                <fullName>95°</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>