force-app/main/default/objects/ProductAttribute/fields/CRI__c.field-meta.xml
<CustomField>
    <fullName>CRI__c</fullName>
    <label>CRI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>75</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>82</fullName>
            </value>
            <value>
                <fullName>90</fullName>
            </value>
            <value>
                <fullName>98</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>