force-app/main/default/objects/ProductAttribute/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <label>Finish</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Pearl Dark Grey (RAL9023)</fullName>
            </value>
            <value>
                <fullName>Satin Nickel</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Aluminium</fullName>
            </value>
            <value>
                <fullName>Grey</fullName>
            </value>
            <value>
                <fullName>Black &amp; Transparent</fullName>
            </value>
            <value>
                <fullName>Black/Clear</fullName>
            </value>
            <value>
                <fullName>Powder Coated</fullName>
            </value>
            <value>
                <fullName>Red &amp; Black</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>