force-app/main/default/objects/ProductAttribute/fields/Input_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Input_Voltage__c</fullName>
    <label>Input Voltage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>115 ~ 240VAC</fullName>
            </value>
            <value>
                <fullName>12VDC</fullName>
            </value>
            <value>
                <fullName>24VDC</fullName>
            </value>
            <value>
                <fullName>48VDC</fullName>
            </value>
            <value>
                <fullName>10 ~ 15VDC</fullName>
            </value>
            <value>
                <fullName>10 ~ 32VDC</fullName>
            </value>
            <value>
                <fullName>10 ~ 420VDC</fullName>
            </value>
            <value>
                <fullName>10 ~ 60VDC</fullName>
            </value>
            <value>
                <fullName>10.5 ~ 15VDC</fullName>
            </value>
            <value>
                <fullName>10.5 ~ 53VDC</fullName>
            </value>
            <value>
                <fullName>10.8 ~ 13.2VDC</fullName>
            </value>
            <value>
                <fullName>100 ~ 240VAC</fullName>
            </value>
            <value>
                <fullName>100 ~ 264VAC</fullName>
            </value>
            <value>
                <fullName>100 ~ 270VAC</fullName>
            </value>
            <value>
                <fullName>100 ~ 277VAC</fullName>
            </value>
            <value>
                <fullName>100 ~ 305VAC</fullName>
            </value>
            <value>
                <fullName>11.4 ~ 13.2VDC</fullName>
            </value>
            <value>
                <fullName>110 ~ 240VAC</fullName>
            </value>
            <value>
                <fullName>110 ~ 295VAC</fullName>
            </value>
            <value>
                <fullName>80 ~ 264VAC</fullName>
            </value>
            <value>
                <fullName>12 ~ 24VDC</fullName>
            </value>
            <value>
                <fullName>12 ~ 36VDC</fullName>
            </value>
            <value>
                <fullName>120 ~ 277VAC</fullName>
            </value>
            <value>
                <fullName>120 ~ 305VAC</fullName>
            </value>
            <value>
                <fullName>85 ~ 264VAC</fullName>
            </value>
            <value>
                <fullName>86 ~ 264VAC</fullName>
            </value>
            <value>
                <fullName>90 ~ 364VAC</fullName>
            </value>
            <value>
                <fullName>90 ~ 264VAC</fullName>
            </value>
            <value>
                <fullName>127 ~ 431VDC</fullName>
            </value>
            <value>
                <fullName>14 ~ 160VDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>