force-app/main/default/objects/ProductAttribute/fields/IP_Rating__c.field-meta.xml
<CustomField>
    <fullName>IP_Rating__c</fullName>
    <label>IP Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IP20</fullName>
            </value>
            <value>
                <fullName>IP21</fullName>
            </value>
            <value>
                <fullName>IP22</fullName>
            </value>
            <value>
                <fullName>IP30</fullName>
            </value>
            <value>
                <fullName>IP40</fullName>
            </value>
            <value>
                <fullName>IP41</fullName>
            </value>
            <value>
                <fullName>IP44</fullName>
            </value>
            <value>
                <fullName>IP54</fullName>
            </value>
            <value>
                <fullName>IP62</fullName>
            </value>
            <value>
                <fullName>IP63</fullName>
            </value>
            <value>
                <fullName>IP64</fullName>
            </value>
            <value>
                <fullName>IP65</fullName>
            </value>
            <value>
                <fullName>IP66</fullName>
            </value>
            <value>
                <fullName>IP67</fullName>
            </value>
            <value>
                <fullName>IP68</fullName>
            </value>
            <value>
                <fullName>IP69</fullName>
            </value>
            <value>
                <fullName>IP70</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>