force-app/main/default/objects/ProductAttribute/fields/LED_Chip_Type__c.field-meta.xml
<CustomField>
    <fullName>LED_Chip_Type__c</fullName>
    <label>LED Chip Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3030</fullName>
            </value>
            <value>
                <fullName>Philips</fullName>
            </value>
            <value>
                <fullName>2835</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>