force-app/main/default/objects/ProductAttribute/fields/LED_Colour__c.field-meta.xml
<CustomField>
    <fullName>LED_Colour__c</fullName>
    <label>LED Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2400-2600K</fullName>
            </value>
            <value>
                <fullName>2500-5700K</fullName>
            </value>
            <value>
                <fullName>2500K</fullName>
            </value>
            <value>
                <fullName>2700K</fullName>
            </value>
            <value>
                <fullName>2800-3200K</fullName>
            </value>
            <value>
                <fullName>2900-3200K</fullName>
            </value>
            <value>
                <fullName>3000-3400K</fullName>
            </value>
            <value>
                <fullName>3000-3500K</fullName>
            </value>
            <value>
                <fullName>3000K</fullName>
            </value>
            <value>
                <fullName>3500-4500K</fullName>
            </value>
            <value>
                <fullName>3700-4250K</fullName>
            </value>
            <value>
                <fullName>3900-4100K</fullName>
            </value>
            <value>
                <fullName>4000K</fullName>
            </value>
            <value>
                <fullName>5000-6500K</fullName>
            </value>
            <value>
                <fullName>5000K</fullName>
            </value>
            <value>
                <fullName>5500-6500K</fullName>
            </value>
            <value>
                <fullName>5600-7000K</fullName>
            </value>
            <value>
                <fullName>5700K</fullName>
            </value>
            <value>
                <fullName>5900-6100K</fullName>
            </value>
            <value>
                <fullName>5900-6300K</fullName>
            </value>
            <value>
                <fullName>5900-6500K</fullName>
            </value>
            <value>
                <fullName>6000-7000K</fullName>
            </value>
            <value>
                <fullName>6000K</fullName>
            </value>
            <value>
                <fullName>6100K</fullName>
            </value>
            <value>
                <fullName>6500K</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>CCT</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>RGB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>