force-app/main/default/objects/ProductAttribute/fields/LEDs_Per_Metre__c.field-meta.xml
<CustomField>
    <fullName>LEDs_Per_Metre__c</fullName>
    <label>LEDs Per Metre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>42</fullName>
            </value>
            <value>
                <fullName>48</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>60+60</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>72</fullName>
            </value>
            <value>
                <fullName>84</fullName>
            </value>
            <value>
                <fullName>108</fullName>
            </value>
            <value>
                <fullName>120</fullName>
            </value>
            <value>
                <fullName>128</fullName>
            </value>
            <value>
                <fullName>140</fullName>
            </value>
            <value>
                <fullName>144</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
            <value>
                <fullName>240</fullName>
            </value>
            <value>
                <fullName>528</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>