force-app/main/default/objects/ProductAttribute/fields/Lens__c.field-meta.xml
<CustomField>
    <fullName>Lens__c</fullName>
    <label>Lens</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Anti-Glare</fullName>
            </value>
            <value>
                <fullName>Anti-Glare,Mesh Guard</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Polycarbonate</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Tempered Glass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>