force-app/main/default/objects/ProductAttribute/fields/Life_Time__c.field-meta.xml
<CustomField>
    <fullName>Life_Time__c</fullName>
    <label>Life Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50,000Hrs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>