force-app/main/default/objects/ProductAttribute/fields/Lumens__c.field-meta.xml
<CustomField>
    <fullName>Lumens__c</fullName>
    <label>Lumens</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100LM</fullName>
            </value>
            <value>
                <fullName>120LM/M</fullName>
            </value>
            <value>
                <fullName>140LM/M</fullName>
            </value>
            <value>
                <fullName>1000LM</fullName>
            </value>
            <value>
                <fullName>1050LM/M</fullName>
            </value>
            <value>
                <fullName>1060LM</fullName>
            </value>
            <value>
                <fullName>1100LM/M</fullName>
            </value>
            <value>
                <fullName>1152LM/M</fullName>
            </value>
            <value>
                <fullName>1200LM/M</fullName>
            </value>
            <value>
                <fullName>1260LM/M</fullName>
            </value>
            <value>
                <fullName>1330LM/M</fullName>
            </value>
            <value>
                <fullName>1080LM</fullName>
            </value>
            <value>
                <fullName>110/20/75/15LM/M</fullName>
            </value>
            <value>
                <fullName>110LM</fullName>
            </value>
            <value>
                <fullName>1200LM</fullName>
            </value>
            <value>
                <fullName>120LM</fullName>
            </value>
            <value>
                <fullName>1250LM</fullName>
            </value>
            <value>
                <fullName>126000LM</fullName>
            </value>
            <value>
                <fullName>12600LM</fullName>
            </value>
            <value>
                <fullName>1300LM</fullName>
            </value>
            <value>
                <fullName>1350LM</fullName>
            </value>
            <value>
                <fullName>13840LM</fullName>
            </value>
            <value>
                <fullName>14000LM</fullName>
            </value>
            <value>
                <fullName>140LM</fullName>
            </value>
            <value>
                <fullName>151200LM</fullName>
            </value>
            <value>
                <fullName>15500LM</fullName>
            </value>
            <value>
                <fullName>15670LM</fullName>
            </value>
            <value>
                <fullName>160LM</fullName>
            </value>
            <value>
                <fullName>16500LM</fullName>
            </value>
            <value>
                <fullName>16800LM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>