force-app/main/default/objects/ProductAttribute/fields/Output_Current__c.field-meta.xml
<CustomField>
    <fullName>Output_Current__c</fullName>
    <label>Output Current</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>&lt;1A</fullName>
            </value>
            <value>
                <fullName>±0 ~ 1000mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 100mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 1250mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 125mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 1500mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 200mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 250mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 300mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 333mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 33mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 34mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 375mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 416mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 42mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 500mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 600mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 625mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 660mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 67mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 800mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 830mA</fullName>
            </value>
            <value>
                <fullName>±0 ~ 83mA</fullName>
            </value>
            <value>
                <fullName>±10 ~ 100mA</fullName>
            </value>
            <value>
                <fullName>±100mA</fullName>
            </value>
            <value>
                <fullName>±125mA</fullName>
            </value>
            <value>
                <fullName>±150 ~ 1500mA</fullName>
            </value>
            <value>
                <fullName>±20 ~ 200mA</fullName>
            </value>
            <value>
                <fullName>±200mA</fullName>
            </value>
            <value>
                <fullName>±250mA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>