force-app/main/default/objects/ProductAttribute/fields/Output_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Output_Voltage__c</fullName>
    <label>Output Voltage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>±12VDC</fullName>
            </value>
            <value>
                <fullName>±15VDC</fullName>
            </value>
            <value>
                <fullName>±24VDC</fullName>
            </value>
            <value>
                <fullName>±5VDC</fullName>
            </value>
            <value>
                <fullName>±5VDC,12VDC</fullName>
            </value>
            <value>
                <fullName>0 ~ 240VAC</fullName>
            </value>
            <value>
                <fullName>10 ~ 54VDC</fullName>
            </value>
            <value>
                <fullName>100 ~ 200VDC</fullName>
            </value>
            <value>
                <fullName>100VDC</fullName>
            </value>
            <value>
                <fullName>105VDC</fullName>
            </value>
            <value>
                <fullName>108VDC</fullName>
            </value>
            <value>
                <fullName>10VDC</fullName>
            </value>
            <value>
                <fullName>11 ~ 33VDC</fullName>
            </value>
            <value>
                <fullName>11 ~ 36VDC</fullName>
            </value>
            <value>
                <fullName>11.5VAC</fullName>
            </value>
            <value>
                <fullName>11.5VDC</fullName>
            </value>
            <value>
                <fullName>110VAC</fullName>
            </value>
            <value>
                <fullName>114.3 ~ 228.6VDC</fullName>
            </value>
            <value>
                <fullName>115VDC</fullName>
            </value>
            <value>
                <fullName>119VDC</fullName>
            </value>
            <value>
                <fullName>12 ~ 24VDC</fullName>
            </value>
            <value>
                <fullName>12 ~ 36VDC</fullName>
            </value>
            <value>
                <fullName>12.5 ~ 36VDC</fullName>
            </value>
            <value>
                <fullName>12.5 ~ 50VDC</fullName>
            </value>
            <value>
                <fullName>12.5 ~ 72VDC</fullName>
            </value>
            <value>
                <fullName>12.5 ~ 84VDC</fullName>
            </value>
            <value>
                <fullName>120VDC</fullName>
            </value>
            <value>
                <fullName>12CVDC</fullName>
            </value>
            <value>
                <fullName>12VDC</fullName>
            </value>
            <value>
                <fullName>12VDC,24VDC,5VDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>