force-app/main/default/objects/ProductAttribute/fields/Outputs__c.field-meta.xml
<CustomField>
    <fullName>Outputs__c</fullName>
    <label>Outputs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 Channel</fullName>
            </value>
            <value>
                <fullName>2 Channel</fullName>
            </value>
            <value>
                <fullName>4 Channel</fullName>
            </value>
            <value>
                <fullName>5 Channels</fullName>
            </value>
            <value>
                <fullName>6 Channels</fullName>
            </value>
            <value>
                <fullName>ATX</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
            </value>
            <value>
                <fullName>Quad</fullName>
            </value>
            <value>
                <fullName>Quintuple</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Six</fullName>
            </value>
            <value>
                <fullName>Triple</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>