force-app/main/default/objects/ProductAttribute/fields/PCB_Width__c.field-meta.xml
<CustomField>
    <fullName>PCB_Width__c</fullName>
    <label>PCB Width</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3.5mm</fullName>
            </value>
            <value>
                <fullName>5mm</fullName>
            </value>
            <value>
                <fullName>6mm</fullName>
            </value>
            <value>
                <fullName>7mm</fullName>
            </value>
            <value>
                <fullName>8mm</fullName>
            </value>
            <value>
                <fullName>10mm</fullName>
            </value>
            <value>
                <fullName>11.5mm</fullName>
            </value>
            <value>
                <fullName>12mm</fullName>
            </value>
            <value>
                <fullName>13.5mm</fullName>
            </value>
            <value>
                <fullName>15.5mm</fullName>
            </value>
            <value>
                <fullName>16mm</fullName>
            </value>
            <value>
                <fullName>18mm</fullName>
            </value>
            <value>
                <fullName>21mm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>