force-app/main/default/objects/ProductAttribute/fields/Power__c.field-meta.xml
<CustomField>
    <fullName>Power__c</fullName>
    <label>Power</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100W</fullName>
            </value>
            <value>
                <fullName>150W</fullName>
            </value>
            <value>
                <fullName>200W</fullName>
            </value>
            <value>
                <fullName>240W</fullName>
            </value>
            <value>
                <fullName>300W</fullName>
            </value>
            <value>
                <fullName>400W</fullName>
            </value>
            <value>
                <fullName>500W</fullName>
            </value>
            <value>
                <fullName>600W</fullName>
            </value>
            <value>
                <fullName>0 ~ 105W</fullName>
            </value>
            <value>
                <fullName>10.2W</fullName>
            </value>
            <value>
                <fullName>100.1W</fullName>
            </value>
            <value>
                <fullName>100.5W</fullName>
            </value>
            <value>
                <fullName>100.8W</fullName>
            </value>
            <value>
                <fullName>10000W</fullName>
            </value>
            <value>
                <fullName>1000W</fullName>
            </value>
            <value>
                <fullName>1001W</fullName>
            </value>
            <value>
                <fullName>1003.2W</fullName>
            </value>
            <value>
                <fullName>10080W</fullName>
            </value>
            <value>
                <fullName>1008W</fullName>
            </value>
            <value>
                <fullName>101W</fullName>
            </value>
            <value>
                <fullName>102W</fullName>
            </value>
            <value>
                <fullName>103.4W</fullName>
            </value>
            <value>
                <fullName>103W</fullName>
            </value>
            <value>
                <fullName>104W</fullName>
            </value>
            <value>
                <fullName>105.6W</fullName>
            </value>
            <value>
                <fullName>105W</fullName>
            </value>
            <value>
                <fullName>106W</fullName>
            </value>
            <value>
                <fullName>108W</fullName>
            </value>
            <value>
                <fullName>10W</fullName>
            </value>
            <value>
                <fullName>10W/M</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>